--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+body, html{
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    background-color: #24283b;
+}
+
+#root{
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
 
 
